# foreman-mcp-server

./: CHANGELOG.md  Makefile  README.md  SECURITY.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  dependency-security.yml  pylint.yml  safety-scan.yml
scripts/: generate_dependency_report.py
src/: foreman_mcp_server.py
src/foreman_mcp_server/: __init__.py  server.py
tests/: test_server.py
