[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "foreman-mcp-server"
version = "0.4.1"
description = "MCP server for Foreman host management and infrastructure automation"
authors = [{name = "Rory McMahon", email = "rory.mcmahon@vocus.com.au"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "mcp==1.14.1",
    "requests==2.32.5",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
keywords = ["mcp", "foreman", "infrastructure", "automation"]

[project.urls]
Homepage = "https://github.com/InfraMCP/foreman-mcp-server"
Repository = "https://github.com/InfraMCP/foreman-mcp-server"
Issues = "https://github.com/InfraMCP/foreman-mcp-server/issues"
Documentation = "https://github.com/InfraMCP/foreman-mcp-server#readme"

[project.optional-dependencies]
dev = [
    "pytest==8.3.3",
    "pytest-asyncio==0.24.0",
    "black==24.8.0",
    "isort==5.13.2",
    "mypy>=1.0.0",
    "build>=0.10.0",
    "twine>=4.0.0",
]
security = [
    "safety>=3.0.0",
    "pip-audit>=2.6.0",
]

[project.scripts]
foreman-mcp-server = "foreman_mcp_server:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
